--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,7 +20,17 @@ monitor=DP-1, preferred, auto,1
 monitor=HDMI-A-1, preferred,0x-650 ,1, transform,3
 
 #workspace binding
+
 workspace=1, monitor:DP-1
+workspace=2, monitor:DP-1
+workspace=3, monitor:DP-1
+workspace=4, monitor:DP-1
+workspace=5, monitor:DP-1
+workspace=6, monitor:HDMI-A-1
+workspace=7, monitor:HDMI-A-1
+
+#Default workspaces
+# exec-once = [workspace 5 silent] spotify-launcher
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -132,6 +142,7 @@ device:epic-mouse-v1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+windowrulev2  = workspace 5, title:^(Spotify)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
