Opacity to Hypr and keyboard wheel volume

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -139,10 +139,17 @@ device:epic-mouse-v1 {
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
+windowrule = float, ^(pavucontrol)$
+#windowrule = float, wofi
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2  = workspace 5, title:^(Spotify)$
+windowrulev2 = workspace 5, title:^(Spotify)$
+
+#Opacity
+windowrulev2 = opacity 0.9 0.7, class:^(kitty)$
+windowrulev2 = opacity 0.95 0.9, class:^(firefox)$
+#windowrulev2 = opacity 0.9 0.5, class:^(wofi)$
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -209,7 +216,10 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # extra apps
 bind = $mainMod SHIFT, W, exec, waybar
-
+#keyboard volume
+bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 # Nvidia
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
