--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -144,6 +144,8 @@ windowrule = float, ^(pavucontrol)$
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+windowrulev2 = float, title:^(Open Folder)$
+windowrulev2 = float, title:^(Open File)$
 windowrulev2 = workspace 5, title:^(Spotify)$
 
 #Opacity
