--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -147,6 +147,7 @@ windowrule = float, ^(pavucontrol)$
 windowrulev2 = float, title:^(Open Folder)$
 windowrulev2 = float, title:^(Open File)$
 windowrulev2 = workspace 5, title:^(Spotify)$
+windowrulev2 = workspace 5, title:^(Spotify Premium)$
 
 #Opacity
 windowrulev2 = opacity 0.9 0.7, class:^(kitty)$
@@ -222,6 +223,12 @@ bind = $mainMod SHIFT, W, exec, waybar
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+
+#screenshots
+bind = , print, exec, ~/.config/scripts/screenshotScreen.sh
+bind = $mainMod, print, exec, ~/.config/scripts/screenshotRegion.sh
+bind = $mainMod Shift, print, exec, ~/.config/scripts/screenshot.sh
+
 # Nvidia
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
