--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -152,6 +152,8 @@ windowrulev2 = workspace 5, title:^(Spotify Premium)$
 #Opacity
 windowrulev2 = opacity 0.9 0.7, class:^(kitty)$
 windowrulev2 = opacity 0.95 0.9, class:^(firefox)$
+windowrulev2 = opacity 0.95 0.9, title:^(Spotify Premium)$
+windowrulev2 = opacity 0.9 0.7, class:^(code-oss)$
 #windowrulev2 = opacity 0.9 0.5, class:^(wofi)$
 
 
