--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,6 +37,7 @@ workspace=7, monitor:HDMI-A-1
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
 exec-once=/usr/lib/polkit-kde-authentication-agent-1 & hyprpaper & waybar
+exec-once=swayidle -w
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -219,6 +220,8 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+#lock screen
+bind = $mainMod, L, exec, swaylock -F
 # extra apps
 bind = $mainMod SHIFT, W, exec, waybar
 #keyboard volume
@@ -237,3 +240,8 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
+
+# turn on screen
+misc {
+	mouse_move_enables_dpms=true
+}
