--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -38,6 +38,10 @@ workspace=7, monitor:HDMI-A-1
 # exec-once = waybar & hyprpaper & firefox
 exec-once=/usr/lib/polkit-kde-authentication-agent-1 & hyprpaper & waybar
 exec-once=swayidle -w
+exec-once = wl-paste --type text --watch cliphist store 
+exec-once = wl-paste --type image --watch cliphist store
+# screen share
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -221,9 +225,10 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 #lock screen
-bind = $mainMod, L, exec, swaylock -F
+bind = $mainMod, L, exec, swaylock
 # extra apps
 bind = $mainMod SHIFT, W, exec, waybar
+bind = $mainMod SHIFT, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
 #keyboard volume
 bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
